<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn = "navigation_view"

>
    <group
            android:checkableBehavior="single"
    >
        <item
                android:id="@+id/sun"
                android:title="@string/sunday"/>
        <item
                android:id="@+id/mon"
                android:title="@string/monday"/>
        <item
                android:id="@+id/tue"
                android:title="@string/tuesday"/>
        <item
                android:id="@+id/wed"
                android:title="@string/wednesday"/>
        <item
                android:id="@+id/thu"
                android:title="@string/thursday"/>

    </group>

</menu>